--- a/Clinica_mvc/web/WEB-INF/web.xml
+++ b/Clinica_mvc/web/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/logar.xhtml</welcome-file>
+        <welcome-file>faces/LoginDaClinica.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
